# invoice-router

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRODUCTION-WORKFLOW.md  README.md  SECURITY.md  compose.yml  config.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  environment.md  glossary.md  ground-truth.md  postgres.md  testing.md
samples/: README.md  config.production.example.yaml
samples/benchmarks/: invoices_small_structural_subset.json
schemas/: ground-truth-v2.schema.json
scripts/: regenerate_ground_truth_local.py
src/invoice_router/: __init__.py  demo.py
src/invoice_router/cli/: main.py
src/invoice_router/config/: __init__.py  loader.py  machine_profiles.py  schema.py  settings.py
src/invoice_router/domain/: __init__.py  ground_truth.py
src/invoice_router/domain/invoices/: __init__.py  classification.py  country_rules.py  family_profiles.py  provider_resolution.py
src/invoice_router/domain/templates/: __init__.py  fingerprinting.py  lifecycle.py  routing.py
src/invoice_router/domain/validation/: __init__.py  field_resolver.py  normalizer.py  validator.py
src/invoice_router/extraction/: __init__.py  ocr.py  pdf_text.py  template_inference.py
src/invoice_router/extraction/heuristics/: party.py  (+4 more)
src/invoice_router/infrastructure/: __init__.py
src/invoice_router/models/: __init__.py  documents.py  enums.py  jobs.py  processing.py  templates.py
src/invoice_router/pipeline/: __init__.py  preprocessing.py  quality.py
src/invoice_router/provenance/: __init__.py  utils.py
src/invoice_router/reporting/: __init__.py  analysis_surface.py  annotator.py  measurements.py  summary.py
src/invoice_router/workers/: celery_app.py
tests/: conftest.py
tests/e2e/: test_demo_command.py  test_native_pdf_flow.py
tests/fixtures/: invoices_small_baseline_2026-04-13.json
tests/integration/: test_invoices_directory.py  test_pipeline.py  test_reporting_integration.py  test_storage.py  test_template_lifecycle.py
tests/unit/: test_analysis_surface.py  test_cli_process.py  test_cli_review_helpers.py  test_cli_workflow.py  test_config.py  test_country_rules.py  test_document_classifier.py  test_family_profiles.py  test_field_resolver.py  test_fingerprint.py  test_ground_truth.py  test_heuristic_discovery.py  test_measurements.py  test_ocr.py  test_pdf_text_extraction.py  test_preprocessor.py  test_provider_resolution.py  test_quality.py  test_redis_client.py  test_reporting.py  test_router.py  test_schema_normalizer.py  test_source.py  test_validator.py  test_workers_celery_app.py
(+7 files in other folders)
